syntax = "proto3";

package greet;

service GreetService {
  // Unary API
  rpc Greet (GreetingRequest) returns (GreetingResponse) {};

  // Streaming server API
  rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

  // Streaming client API
  rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse) {};

  // Bi-directional streaming API
  rpc GreetEveryone (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
}

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetingRequest {
  Greeting greeting = 1;
}

message GreetingResponse {
  string result = 1;
}

message GreetManyTimesRequest {
  Greeting greeting = 1;
}

message GreetManyTimesResponse {
  string result = 1;
}


message LongGreetRequest {
  Greeting greet = 1;
}

message LongGreetResponse {
  string result = 1;
}

message GreetEveryoneRequest {
  Greeting greet = 1;
}

message GreetEveryoneResponse {
  string result = 1;
}